[package]
name = "libipld"
version = "0.14.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "library for dealing with ipld"
repository = "https://github.com/ipld/libipld"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
shared-version = true

[dependencies]
async-trait = "0.1.50"
cached = { version = "0.30.0", default-features = false }
fnv = "1.0.7"
libipld-cbor = { version = "0.14.0", path = "dag-cbor", optional = true }
libipld-cbor-derive = { version = "0.14.0", path = "dag-cbor-derive", optional = true }
libipld-core = { version = "0.14.0", path = "core" }
libipld-json = { version = "0.14.0", path = "dag-json", optional = true }
libipld-macro = { version = "0.14.0", path = "macro" }
libipld-pb = { version = "0.14.0", path = "dag-pb", optional = true }
libipld-git = { version = "0.14.0", path = "dag-git", optional = true }
log = "0.4.14"
multihash  = { git = "https://gitlab.com/ColombaLink/dev/dapsi/public/dybli/core/deps/rust-multihash.git"}
parking_lot = "0.12.0"
thiserror = "1.0.25"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
criterion = "0.3.4"
proptest = "1.0.0"
model = "0.1.2"
multihash  = { git = "https://gitlab.com/ColombaLink/dev/dapsi/public/dybli/core/deps/rust-multihash.git"}

[features]
default = ["dag-cbor", "dag-json", "dag-pb", "derive","dag-git"]
dag-cbor = ["libipld-cbor"]
dag-json = ["libipld-json"]
dag-pb = ["libipld-pb"]
dag-git = ["libipld-git"]
derive = ["libipld-cbor-derive"]
serde-codec = ["libipld-core/serde-codec"]

[workspace]
members = [
  "core",
  "dag-cbor",
  "dag-cbor-derive",
  "dag-json",
  "dag-pb",
  "dag-git",
  "macro",
  "dag-cbor-derive/examples/renamed-package",
]

[profile.release]
debug = true

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "store"
harness = false


