[package]
name = "libipld-git"
version = "0.14.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ipld protobuf codec"
repository = "https://github.com/ipfs-rust/rust-ipld"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
libipld-core = { version = "0.14.0", path = "../core" }
prost = "0.11.0"
thiserror = "1.0.25"
multihash  = { git = "https://github.com/timoCasti/multihash.git"}


[dev-dependencies]
libipld-macro = { path = "../macro" }

